--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,12 @@ url: "https://Kimist99.github.io" # the base hostname & protocol for your site, 
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
+author: Kimberly D
 author-img: david-freeman.jpg # add your photo
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
+social-twitter: @DataKimist
+social-github: Kimist99
+social-linkedin: 
 social-email: # add your Email address
 
 # Disqus
