--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ author-img: david-freeman.jpg # add your photo
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
 social-twitter: @DataKimist
 social-github: Kimist99
-social-linkedin: 
-social-email: # add your Email address
+social-linkedin: https://www.linkedin.com/in/kimberly-d-b0570737/
+social-email: Kimist99@gmail.com
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
