--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,11 @@ description: > # this means to ignore newlines until "baseurl:"
 permalink: ':title/'
 baseurl: "/kimberlyd.github.io" # the subpath of your site, e.g. /blog
 url: "https://github.com/Kimist99" # the base hostname & protocol for your site, e.g. http://example.com
-site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Kimberly D
 author-img: KimNYC21_copy.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+about-author: I'm a Chemical and Health Informaticist, Data Science Consultant and Educator, and PhD Candidate in Health Informatics
 social-twitter: @DataKimist
 social-github: Kimist99
 social-linkedin: https://www.linkedin.com/in/kimberly-d-b0570737/
