--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "/kimberlyd.github.io" # the subpath of your site, e.g. /blog
-url: "https://github.com/Kimist99" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/kimberlyd" # the subpath of your site, e.g. /blog
+url: "https://github.com/Kimist99.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author Settings
 author: Kimberly D
