--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "https://github.com/Kimist99.github.io" # the base hostname & protocol for 
 
 # Author Settings
 author: Kimberly D
-author-img: KimNYC21_copy.jpg # add your photo
+author-img: KimNYC21 copy.jpg # add your photo
 about-author: I'm a Chemical and Health Informaticist, Data Science Consultant and Educator, and PhD Candidate in Health Informatics
 social-twitter: @DataKimist
 social-github: Kimist99
